--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/src/assets/favico/logo-light.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/src/assets/favico/logo-dark.svg" media="(prefers-color-scheme: dark)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Draft Master</title>
   </head>
   <body>
     <div id="app"></div>
