--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="/src/assets/favico/logo-light.svg"
+      href="public/favico/logo-light.svg"
       media="(prefers-color-scheme: light)"
     />
     <link
       rel="icon"
-      href="/src/assets/favico/logo-dark.svg"
+      href="public/favico/logo-dark.svg"
       media="(prefers-color-scheme: dark)"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Draft Master</title>
