--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="public/favico/logo-light.svg"
+      href="/favico/logo-light.svg"
       media="(prefers-color-scheme: light)"
     />
     <link
       rel="icon"
-      href="public/favico/logo-dark.svg"
+      href="/favico/logo-dark.svg"
       media="(prefers-color-scheme: dark)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
